test: test gitee to github to netlify workflow

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ p.annotation{
 </head>
 
 <body style="margin:0px;" >
-<h1>HTML5 little Games</h1>
+<h1>ldbds Gitee Homepage</h1>
 <hr/>
 
-<p><a href='/Mermaid_Test/Mermaid_Test' title='Tank'>Tank</a></p>
+<p><a href='/Mermaid_Test/Mermaid_Test' title='Mermaid'>Mermaid</a></p>
 <img src='Mermaid_Test/Mermaid_Test.png'/>
 <p class='annotation'> 
 Mermaid_Test<br/>
